[gd_scene load_steps=2 format=3 uid="uid://bsdnfol5k5loy"]

[ext_resource type="Script" path="res://Scripts/UI Scripts/base_pause_ui.gd" id="1_opb4c"]

[node name="BasePauseUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_opb4c")

[node name="PauseBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.807843, 0.592157, 0.843137)

[node name="PauseText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 40.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]PAUSED"

[node name="BoxContainer" type="BoxContainer" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(35, 0)
alignment = 1
vertical = true

[node name="ResumeButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="button_down" from="BoxContainer/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="button_down" from="BoxContainer/OptionsButton" to="." method="_on_options_button_button_down"]
[connection signal="button_down" from="BoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
